# dagster-odp

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  RELEASE.md  index.html  mkdocs.yml  odp_notes.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  gh_pages.yml  release.yml
concepts/automation/: index.html
concepts/concepts/: index.html
concepts/configuration/: index.html
concepts/definitions/: index.html
concepts/resources/: index.html
concepts/tasks_and_assets/: index.html
dagster_odp/: __init__.py  utils.py
dagster_odp/config_manager/builders/: __init__.py  base_builder.py  config_builder.py  workflow_builder.py
dagster_odp/config_manager/models/: config_model.py  workflow_model.py
dagster_odp/creators/: asset_check_creator.py  job_creator.py  schedule_creator.py  sensor_creator.py
dagster_odp/creators/asset_creators/: __init__.py  base_asset_creator.py  dbt_asset_creator.py  dbt_project_manager.py  dlt_asset_creator.py  generic_asset_creator.py  utils.py
dagster_odp/resources/: __init__.py  resource_registry.py
dagster_odp/resources/definitions/: __init__.py  dlt_resource.py  duckdb_resource.py  soda_resource.py  utils.py
dagster_odp/sensors/definitions/: gcs_sensor.py
dagster_odp/sensors/manager/: base_sensor.py  sensor_registry.py
dagster_odp/tasks/: utils.py
dagster_odp/tasks/definitions/: __init__.py  duckdb_tasks.py  gcp_tasks.py  shell_tasks.py
dagster_odp/tasks/manager/: __init__.py  base_task.py  task_registry.py
dagster_vayu/: __init__.py  constants.py  utils.py
dagster_vayu/config_manager/builders/: base_builder.py  config_builder.py  workflow_builder.py
dagster_vayu/config_manager/models/: config_model.py  workflow_model.py
dagster_vayu/creators/: __init__.py  asset_check_creator.py  job_creator.py  resource_creator.py  schedule_creator.py  sensor_creator.py
dagster_vayu/creators/asset_creators/: __init__.py  base_asset_creator.py  dbt_asset_creator.py  dbt_project_manager.py  dlt_asset_creator.py  generic_asset_creator.py  utils.py
dagster_vayu/jobs/: job_creator.py
dagster_vayu/resources/: __init__.py  dlt_resource.py  resource_registry.py  soda_resource.py  utils.py
dagster_vayu/resources/definitions/: __init__.py  dlt_resource.py  duckdb_resource.py  soda_resource.py
dagster_vayu/sensors/: sensor_creator.py
dagster_vayu/sensors/definitions/: gcs_sensor.py
dagster_vayu/sensors/manager/: base_sensor.py  sensor_registry.py
dagster_vayu/tasks/: utils.py
dagster_vayu/tasks/asset_creators/: base_asset_creator.py  dbt_asset_creator.py  dlt_asset_creator.py  generic_asset_creator.py
dagster_vayu/tasks/definitions/: __init__.py  duckdb_tasks.py  gcp.py  gcp_tasks.py  shell_tasks.py
dagster_vayu/tasks/manager/: __init__.py  base_task.py  task_registry.py
diagrams/: chess_pipeline.excalidraw
docs/: ODP.docx  index.md
docs/concepts/: automation.md  concepts.md  configuration.md  definitions.md  resources.md  tasks_and_assets.md
docs/getting-started/: overview.md  quickstart.md
docs/integrations/: dbt.md  dlt.md  integrations.md  soda.md
docs/reference/: dagster_config.md  reference.md  workflow_config.md
docs/tutorials/: chess_part_1.md  chess_part_2.md  chess_part_3.md  chess_tutorial.md  tutorials.md  weather_analysis.md  weather_tutorial.md
getting-started/overview/: index.html
getting-started/quickstart/: index.html
integrations/dbt/: index.html
integrations/dlt/: index.html
integrations/integrations/: index.html
integrations/soda/: index.html
reference/dagster_config/: index.html
reference/reference/: index.html
reference/workflow_config/: index.html
src/vayu/schedules/: schedule_creator.py
src/vayu/tasks/: utils.py
src/vayu/tasks/definitions/: gcp.py
tests/: test_utils.py
tests/test_assets/: test_utils.py
tests/test_assets/test_asset_managers/: test_asset_manager.py  test_dbt_asset_manager.py  test_dlt_asset_manager.py
tests/test_assets/test_task_definitions/: test_gcp.py
tests/test_creators/: test_asset_check_creator.py  test_job_creator.py  test_resource_creator.py  test_schedule_creator.py  test_sensor_creator.py
tests/test_jobs/: test_job_creator.py
tests/test_resources/: test_dlt_resource.py  test_init.py  test_soda_resource.py  test_utils.py
tests/test_schedules/: test_schedule_creator.py
tests/test_sensors/: test_sensor_creator.py
tests/test_tasks/: test_utils.py
tutorials/chess_part_1/: index.html
tutorials/chess_part_2/: index.html
tutorials/chess_part_3/: index.html
tutorials/tutorials/: index.html
tutorials/weather_tutorial/: index.html
(+34 files in other folders)
