[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-odp"
dynamic = ["version"]
description = "A data engineering framework using Dagster, dbt, and Google Cloud"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Jonathan Bhaskar", email = "jonathan.bhaskar@gmail.com"},
]
dependencies = [
    "requests",
    "google-cloud-storage",
    "dagster",
    "dagster-webserver",
    "dagster-gcp",
    "dbt-core",
    "dbt-bigquery",
    "dagster-dbt",
    "dlt[bigquery]",
    "duckdb",
    "fsspec",
    "gcsfs",
    "soda-core",
    "soda-core-bigquery",
    "soda-core-duckdb",
    "dbt-duckdb",
    "chevron"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "freezegun",
    "mkdocs-material"
]