[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-odp"
dynamic = ["version"]
description = "A configuration-driven framework for building Dagster pipelines"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Jonathan Bhaskar", email = "hello@jonathanb.me"},
]
dependencies = [
    # Core Dagster - Pin to specific minor version for stability
    "dagster>=1.9.0,<1.10.0",
    "dagster-webserver>=1.9.0,<1.10.0",
    
    # Dagster Integrations - Keep in sync with core
    "dagster-gcp>=0.25.0,<0.26.0",
    "dagster-dbt>=0.25.0,<0.26.0",
    
    # DBT Stack - Use compatible versions
    "dbt-core>=1.8.6,<1.9.0",
    "dbt-bigquery>=1.8.2,<1.9.0",
    "dbt-duckdb>=1.8.3,<1.9.0",
    
    # Data Loading Tool
    "dlt[bigquery]>=0.5.4,<0.6.0",
    
    # Database
    "duckdb>=1.0.0,<2.0.0",
    
    # Cloud Storage
    "google-cloud-storage>=2.18.2,<3.0.0",
    "fsspec>=2024.9.0",
    "gcsfs>=2024.9.0",
    
    # Data Quality
    "soda-core>=3.3.19,<3.4.0",
    "soda-core-bigquery>=3.3.19,<3.4.0", 
    "soda-core-duckdb>=3.3.19,<3.4.0",
    
    # Utilities
    "chevron>=0.14.0,<0.15.0",
    "requests>=2.32.3,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "coverage>=7.0.0",
    "freezegun>=1.5.1,<2.0.0",
    "mkdocs-material>=9.5.39,<10.0.0",
    "mkdocs-glightbox>=0.4.0,<0.5.0"
]